# Tarot

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
src/: Card.cpp  Card.h  CardTable.cpp  CardTable.h  MainWindow.cpp  MainWindow.h  ScalingLabel.cpp  ScalingLabel.h  SidePanel.cpp  SidePanel.h  TarotDeck.cpp  TarotDeck.h  [Frame] CardTable.cpp  main.cpp
